Don't ignore the libraries

--- a/.gitignore
+++ b/.gitignore
@@ -336,4 +336,7 @@ gradle-app.setting
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
 
+# Libraries
+!libs/*.jar
+
 # End of https://www.gitignore.io/api/java,gradle,eclipse,android,androidstudio,intellij,gwt
